objects/Product_Qualification__c.object
<CustomObject>
    <description>R4 - Product Qualification</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>R4 - Account</description>
        <inlineHelpText>Customer for which the initiative has been created</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Qualifications</relationshipLabel>
        <relationshipName>Product_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Cost_USD__c</fullName>
        <description>R4 - This is mainly used to Capture the actual cost of the USD</description>
        <label>Actual Cost USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>R4 - Actual End Date</description>
        <inlineHelpText>The date when the product is qualified. The date is set automatically by the system when the Qualification Level is +2</inlineHelpText>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>R4 - Approval date</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>R4 Approval Status</description>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <description>R4 - Approval</description>
        <label>Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApproverName__c</fullName>
        <label>Approver Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Available_Market_CAPEX__c</fullName>
        <description>R4 - Available Market CAPEX</description>
        <inlineHelpText>This is the estimated market value for new applications, in USD budget rate.</inlineHelpText>
        <label>Available Market CAPEX USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Market_OPEX__c</fullName>
        <description>R4 - Available Market OPEX</description>
        <inlineHelpText>This is the estimated market value to maintain new applications, in USD budget rate.</inlineHelpText>
        <label>Available Market OPEX USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Market_Total__c</fullName>
        <description>R4 Total value of Available Market CAPEX  and  Available Market OPEX</description>
        <formula>Available_Market_CAPEX__c  +  Available_Market_OPEX__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Market Total USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit_name__c</fullName>
        <description>R5-Field to display the Qualification product&apos;s Business Unit Name</description>
        <label>Business Unit name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>R4 Close Date</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R4V1-This field refers to comments.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Account_Name__c</fullName>
        <description>R4 Competitor Account Name</description>
        <label>Competitor Account Name</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R4 - Competitor</description>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Product Qualifications</relationshipLabel>
        <relationshipName>Product_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Product_Qualification_Level_2__c</fullName>
        <description>R4 - Current qualification level</description>
        <label>Current Product Qualification - Level</label>
        <picklist>
            <picklistValues>
                <fullName>-3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Product_Qualification_Level__c</fullName>
        <description>R4 Current Product Qualification Level</description>
        <label>Current Product Qualification Level</label>
        <picklist>
            <picklistValues>
                <fullName>Product not qualified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification in progress – Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification in progress – Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification in progress – Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Qualified Supplier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Country__c</fullName>
        <description>R4 - Text from GIS (Formula Field which copies the Account Country in to Product Qualification.Country Name)</description>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_GUID__c</fullName>
        <description>R4 - ID from GIS (formula field copies GUID from Account)</description>
        <formula>Account__r.GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Pilot_Installation_Start_Date__c</fullName>
        <label>Customer Pilot Installation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>R5-Field to display the Qualification product&apos;s Division value</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_USD__c</fullName>
        <description>R4- This Field will be used to capture the Total estimated Budget Value of the Initiative</description>
        <label>Estimated Cost USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Family_Tree_Level__c</fullName>
        <description>R4 Family Tree Level</description>
        <formula>TEXT(Account__r.Family_Tree_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family Tree Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Trigger_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R4 Check box field is used in the validation rule Reason_for_Not_Qualified_Check to bypass the trigger</description>
        <label>Hidden Trigger Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initiative_Name__c</fullName>
        <description>R4 - Initiative name</description>
        <label>Initiative Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiative_Status__c</fullName>
        <description>R4 - Initiative status</description>
        <label>Initiative Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Not Qualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiative_Strategic_Reason__c</fullName>
        <description>R4 - Initiative Strategic Reason</description>
        <inlineHelpText>Objective of this initiative (e.g. “Qualification of RIP bushings for SPT transformers range, up to 170kV”).</inlineHelpText>
        <label>Initiative Strategic Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>R4 - Level date.</description>
        <label>Level Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Commercial_Name__c</fullName>
        <description>R4 Product Commercial Name</description>
        <label>Product Commercial Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>R4 Product Group</description>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>R4 Product Name</description>
        <inlineHelpText>This field shows the product or product family object of the initiative. The name visible is automatically selected by the offcial ABB Offering Tree. This field cannot be modified unless if a new product or product family is selected</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Expiration_Date__c</fullName>
        <description>R4V1-This field refers to Qualification Expiration Date.</description>
        <label>Qualification Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter_1__c</fullName>
        <defaultValue>IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;01&quot;),&quot;-3&quot;,
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;02&quot;),&quot;-3&quot;,
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;03&quot;),&quot;-3&quot;,NULL)))</defaultValue>
        <description>R4 Quarter 1</description>
        <label>Quarter 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_2__c</fullName>
        <defaultValue>IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;04&quot;),&quot;-3&quot;,
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;05&quot;),&quot;-3&quot;,
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;06&quot;),&quot;-3&quot;,NULL)))</defaultValue>
        <description>R4 Quarter 2</description>
        <label>Quarter 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_3__c</fullName>
        <defaultValue>IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;07&quot;),&quot;-3&quot;,
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;08&quot;),&quot;-3&quot;,
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;09&quot;),&quot;-3&quot;,NULL)))</defaultValue>
        <description>R4 Quarter 3</description>
        <label>Quarter 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Closed_Date__c</fullName>
        <description>R4V1-This field refers to Quotation Closed Date.</description>
        <label>Quotation Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quotation_ID__c</fullName>
        <description>R4 - This field refers to Quotation ID</description>
        <label>Quotation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Status__c</fullName>
        <description>R4V1-This field refers to Quotation Status.</description>
        <label>Quotation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quotation_Value__c</fullName>
        <description>R4V1-This field refers to Quotation Value.</description>
        <label>Quotation Value USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_not_Qualified__c</fullName>
        <description>R4V1-This field refers to Reason for not Qualified.</description>
        <label>Reason for not Qualified</label>
        <picklist>
            <picklistValues>
                <fullName>ABB Cancelled the Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Cancelled the Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Fulfilling Customer Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Fulfilling Local/Industry Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>R4 - This field refers to Remarks.</description>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Location__c</fullName>
        <description>R4 Source Location</description>
        <inlineHelpText>Factory responsible for the qualification initiative</inlineHelpText>
        <label>Source Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Startdate__c</fullName>
        <description>R4 - Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R4 Status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_End_Date__c</fullName>
        <description>R4 - Target End Date</description>
        <label>Target End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Qualification_Level__c</fullName>
        <description>R4 - Target qualification level</description>
        <label>Target Qualification Level</label>
        <picklist>
            <picklistValues>
                <fullName>-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not fulfilling customer specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not fulfilling local/industry standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer cancelled the project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB cancelled the project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>R4 value</description>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YQ1__c</fullName>
        <defaultValue>IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;01&quot;),(TEXT(MONTH(TODAY())) &amp; &quot;/&quot;  &amp; TEXT(YEAR(TODAY()))),
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;02&quot;),(TEXT(MONTH(TODAY())) &amp; &quot;/&quot; &amp; TEXT(YEAR(TODAY()))),
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;03&quot;),(TEXT(MONTH(TODAY())) &amp; &quot;/&quot;  &amp; TEXT(YEAR(TODAY()))),NULL)))</defaultValue>
        <description>R4 YQ1</description>
        <label>YQ1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YQ2__c</fullName>
        <defaultValue>IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;04&quot;),(TEXT(MONTH(TODAY())) &amp; &quot;/&quot; &amp; TEXT(YEAR(TODAY()))),
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;05&quot;),(TEXT(MONTH(TODAY())) &amp; &quot;/&quot; &amp; TEXT(YEAR(TODAY()))),
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;06&quot;),(TEXT(MONTH(TODAY())) &amp; &quot;/&quot; &amp; TEXT(YEAR(TODAY()))),NULL)))</defaultValue>
        <description>R4 YQ2</description>
        <label>YQ2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YQ3__c</fullName>
        <defaultValue>IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;07&quot;),(TEXT(MONTH(TODAY())) &amp; &quot;/&quot; &amp; TEXT(YEAR(TODAY()))),
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;08&quot;),(TEXT(MONTH(TODAY())) &amp; &quot;/&quot; &amp; TEXT(YEAR(TODAY()))),
IF(CONTAINS(TEXT(MONTH(TODAY())),&quot;09&quot;),(TEXT(MONTH(TODAY())) &amp; &quot;/&quot; &amp; TEXT(YEAR(TODAY()))),NULL)))</defaultValue>
        <description>R4 YQ3</description>
        <label>YQ3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Product_Qualifications__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Product Qualifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Qualification</label>
    <listViews>
        <fullName>All_Product_Qualifications</fullName>
        <columns>NAME</columns>
        <columns>Initiative_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Initiative_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Customer_Country__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Source_Location__c</columns>
        <columns>Available_Market_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Qualifications</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Product_Qualifications</fullName>
        <columns>NAME</columns>
        <columns>Initiative_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Initiative_Status__c</columns>
        <columns>Account__c</columns>
        <columns>Customer_Country__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Source_Location__c</columns>
        <columns>Available_Market_Total__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Product Qualifications</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PRD-QUALIF-{0000}</displayFormat>
        <label>Initiative ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Qualifications</pluralLabel>
    <recordTypes>
        <fullName>Closed_Not_Qualified_Layout</fullName>
        <active>true</active>
        <description>R4 Closed Not Qualified Layout</description>
        <label>Closed Not Qualified Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Qualified</fullName>
        <active>true</active>
        <description>R4 Closed_Qualified</description>
        <label>Closed Qualified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Layout</fullName>
        <active>true</active>
        <description>R4 Open_Layout</description>
        <label>Open Layout</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Minus_Values_Check</fullName>
        <active>true</active>
        <description>R4 Cannot enter Minus value in Available_Market_CAPEX__c, Available_Market_OPEX__c,Actual_Cost_USD__c, Estimated_Cost_USD__c</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
NOT($User.AccountMerge_Override__c),OR(OR(Available_Market_CAPEX__c &lt; 0 , Available_Market_OPEX__c &lt; 0), AND(NOT(ISNULL(Estimated_Cost_USD__c)), Estimated_Cost_USD__c &lt; 0),
AND(NOT(ISNULL(Actual_Cost_USD__c)), Actual_Cost_USD__c &lt; 0)))</errorConditionFormula>
        <errorMessage>You cannot enter minus values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Product_Qualification_On_Bulk_Account</fullName>
        <active>true</active>
        <description>Related Account cannot be Bulk Business.</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.Validation_Override__c.Exclude__c),
    CONTAINS(LOWER(Account__r.Name), &apos;bulk business&apos;)
)</errorConditionFormula>
        <errorMessage>Related Account cannot be Bulk Business.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_End_Date_cannot_be_Past_Date</fullName>
        <active>true</active>
        <description>R4 Check the Target End Date cannot be entered as a past date</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Account_Merge_Override__c) ,Target_End_Date__c &lt; TODAY())</errorConditionFormula>
        <errorDisplayField>Target_End_Date__c</errorDisplayField>
        <errorMessage>The Target End Date cannot be entered as a past date</errorMessage>
    </validationRules>
</CustomObject>